--- a/Interface/AddOns/MikScrollingBattleText/readme.html
+++ b/Interface/AddOns/MikScrollingBattleText/readme.html
@@ -39,7 +39,7 @@
   <div id="HeaderBlock">
    Version: 5.7<br />
    Author: Mikord<br />
-   Updated: September 12, 2013<br />
+   Updated: October 15, 2014<br />
    Official Site: <a href="http://mikord.wowinterface.com">http://mikord.wowinterface.com</a><br /><br />
    <a href="#Credits">See Credits</a>
   </div>
@@ -210,17 +210,17 @@
      <li>Default Triggers:</li>
      <ul>
       <li>All Relevant Classes - Low Health, Low Mana, Low Pet Health</li>
-      <li>Death Knight - Killing Machine, Rime, Rune Strike, Shadow Infusion x5</li>
-      <li>Druid - Berserk, Clearcasting, Eclipse (Lunar), Eclipse (Solar), Owlkin Frenzy, Predator's Swiftness, Shooting Stars</li> 
+      <li>Death Knight - Killing Machine, Rime, Shadow Infusion x5</li>
+      <li>Druid - Berserk, Clearcasting, Predator's Swiftness, Shooting Stars</li> 
       <li>Hunter - Kill Shot, Lock and Load</li>
       <li>Mage - Brain Freeze, Clearcasting, Fingers of Frost, Missile Barrage</li>
-      <li>Monk- Elusive Brew x5, x10, x15, Mana Tea x20, Power Guard x3, Vital Mists x5</li>
+      <li>Monk- Elusive Brew x5, x10, x15, Mana Tea x20, Vital Mists x5</li>
       <li>Paladin - Hammer of Wrath, The Art of War</li>
       <li>Priest - Clearcasting</li>
       <li>Rogue - Blindside</li>
       <li>Shaman - Clearcasting, Lava Surge, Maelstrom Weapon x5, Tidal Waves</li>
-      <li>Warlock - Backlash, Decimation, Molten Core, Nightfall</li>
-      <li>Warrior - Bloodsurge, Execute, Overpower, Revenge, Sudden Death, Taste for Blood, Victory Rush</li>
+      <li>Warlock - Decimation, Molten Core, Nightfall</li>
+      <li>Warrior - Bloodsurge, Execute, Revenge, Sudden Death, Taste for Blood, Victory Rush</li>
      </ul>
     </ul>
    </div>
@@ -1211,6 +1211,43 @@
    <table cellspacing="3">
     <tr>
      <td class="ParameterName" nowrap="nowrap"><a name="WhatsNew"></a>Latest</td>
+     <td class="ParameterDesc">
+      <ul>
+       <li>Fixed the ability to add custom fonts via the custom media tab.</li>
+      </ul>
+     </td>
+    </tr>
+    <tr>
+     <td class="ParameterName" nowrap="nowrap">5.7.134</td>
+     <td class="ParameterDesc">
+      <ul>
+       <li>Fixed an issue where the font previews were not updating properly.</li>
+       <li>Updated parser to support the new parameters introduced by patch 6.0.2.</li>
+      </ul>
+     </td>
+    </tr>
+    <tr>
+     <td class="ParameterName" nowrap="nowrap">5.7.132</td>
+     <td class="ParameterDesc">
+      <ul>
+       <li>Updated for Patch 6.0.2 / Warlords of Draenor
+        <ul>
+         <li>Modified global constants for item quality to their new values.</li>
+         <li>Removed Berserker Stance from available trigger conditions.</li>
+         <li>Removed Backlash default trigger.</li>
+         <li>Removed Owlkin Frenzy default trigger.</li>
+         <li>Removed Overpower default trigger.</li>
+         <li>Removed Power Guard default trigger.</li>
+         <li>Removed Rune Strike default trigger.</li>
+         <li>Removed Solar and Lunar Eclipse default triggers.</li>
+         <li>Modified several skill IDs to reflect their new values.</li>
+         <li>Updated TOC for Patch 6.0.2.</li>
+        </ul>
+      </ul>
+     </td>
+    </tr>
+    <tr>
+     <td class="ParameterName" nowrap="nowrap">5.7.131</td>
      <td class="ParameterDesc">
       <ul>
        <li>Fixed issue introduced with Patch 5.4 where the fonts could not be changed.</li>
